# gitingest-mcp

./: LICENSE  README.md  pyproject.toml  test_gitingest_direct.py
src/gitingest_mcp/: server.py
