[project]
name = "sam-gitingest-mcp"
version = "0.2.1"
description = "An MCP server for gitingest"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.3",
    "gitingest @ git+https://github.com/a3ng7n/gitingest.git@2a77705",
]


[[project.authors]]
name = "RonanMcGovern"
email = "78278410+RonanKMcGovern@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
sam-gitingest-mcp = "gitingest_mcp:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gitingest_mcp"]
